# cace

./: CMakeLists.txt  README.md
alica_cace_proxy/: CMakeLists.txt  package.xml
alica_cace_proxy/include/clock/: AlicaCaceClock.h
alica_cace_proxy/include/communication/: AlicaCaceCommunication.h
alica_cace_proxy/include/constraintmodul/: CaceVariableSync.h  SolverSelector.h
alica_cace_proxy/src/clock/: AlicaCaceClock.cpp
alica_cace_proxy/src/communication/: AlicaCaceCommunication.cpp
alica_cace_proxy/src/constraintmodul/: CaceVariableSync.cpp  SolverSelector.cpp
alica_cace_tests/: CMakeLists.txt  package.xml
alica_cace_tests/src/: test_alica_authority.cpp  test_alica_init_shutdown.cpp  test_alica_multi_agent_plan.cpp
cace/: CMakeLists.txt  README.md  artificialDelayAndLoss.sh  package.xml
cace/include/: cace.h  caceSpace.h
cace/include/communication/: CaceCommunication.h
cace/include/communication/jobs/: BelieveNotificationJob.h  CommandAcknowledgeJob.h  CommandJob.h  RequestJob.h  ShortAckJob.h
cace/include/communication/multicast/: CaceMultiCastChannel.h
cace/include/timeManager/: AgentCommunicationModel.h  AgentTimeData.h  TimeManager.h
cace/include/variableStore/: CVariableStore.h
cace/include/variables/: CaceMutex.h  ConsensusVariable.h  Election.h  TaskSet.h
cace/include/variables/serializer/: serialize.h
cace/include/variables/util/: Delegate.h
cace/msg/: CaceAcknowledge.msg  CaceBelieveNotification.msg  CaceCommand.msg  CaceShortAck.msg  CaceTime.msg  CaceVariableRequest.msg
cace/src/: cace.cpp  caceSpace.cpp
cace/src/caceMonitor/: caceMonitor.cpp
cace/src/communication/: CaceCommunication.cpp  CaceCommunicationMultiCast.cpp  CaceCommunicationRos.cpp  CommunicationWorker.cpp
cace/src/communication/jobs/: BelieveAcknowledgeJob.cpp  BelieveNotificationJob.cpp  CommandJob.cpp  RequestJob.cpp
cace/src/timeManager/: AgentCommunicationModel.cpp  AgentTimeData.cpp  TimeManager.cpp
cace/src/variables/: ConsensusVariable.cpp
cace/test/: applicationTests.cpp  caceTests.cpp  jobTests.cpp  systemTests.cpp
cace/test/eval/: consistencyEval.cpp  scalability.cpp  speed.cpp  timeEval.cpp
flooding_test/: CMakeLists.txt  package.xml
flooding_test/src/: flooding_test_node.cpp
include/: CaceTypes.h  cace.h  caceSpace.h
include/communication/: CaceCommunication.h  CaceCommunicationMultiCast.h  CaceCommunicationQuiet.h  CaceCommunicationRos.h  CommunicationWorker.h  JobStateEntity.h  caceCommunication.h
include/communication/jobs/: AbstractCommunicationJob.h  BelieveAcknowledgeJob.h  BelieveNotificationJob.h  CommandAcknowledgeJob.h  CommandJob.h  RequestJob.h  ShortAckJob.h  WriteAckJob.h  WriteJob.h
include/communication/multicast/: CaceMultiCastChannel.h  PracticalSocket.h
include/timeManager/: AgentCommunicationModel.h  AgentTimeData.h  TimeManager.h
include/variableStore/: CVariableStore.h
include/variables/: CaceMutex.h  ConsensusVariable.h  Election.h
include/variables/serializer/: serialize.h
msg/: CaceAcknowledge.msg  CaceBelieveNotification.msg  CaceCommand.msg  CaceShortAck.msg  CaceType.msg  CaceVariableRequest.msg
multicast_test_bridge/: CMakeLists.txt  package.xml  relayMsgs.conf
multicast_test_bridge/proxy_gen/: ros2udpProxy.cpp
paxostest/: .README.md.swp  CMakeLists.txt  package.xml  paxos.conf
paxostest/evpaxos/: evacceptor.c  evlearner.c  evproposer.c  message.c  peers.c
paxostest/evpaxos/include/: message.h
paxostest/paxos/: proposer.c
paxostest/sample/: acceptor.c  acceptor.cpp  client.c  client.cpp  counter.cpp  learner.cpp  proposer.c  proposer.cpp  replica.cpp
src/: cace.cpp  caceSpace.cpp
src/caceMonitor/: caceMonitor.cpp
src/communication/: CaceCommunication.cpp  CaceCommunicationMultiCast.cpp  CaceCommunicationQuiet.cpp  CaceCommunicationRos.cpp  CommunicationWorker.cpp  JobStateEntity.cpp  caceCommunication.cpp
src/communication/jobs/: AbstractCommunicationJob.cpp  BelieveAcknowledgeJob.cpp  BelieveNotificationJob.cpp  CommandAcknowledgeJob.cpp  CommandJob.cpp  RequestJob.cpp  ShortAckJob.cpp  WriteAckJob.cpp  WriteJob.cpp
src/communication/multicast/: PracticalSocket.cpp
src/timeManager/: AgentCommunicationModel.cpp  AgentTimeData.cpp  TimeManager.cpp
src/variableStore/: CVariableStore.cpp
src/variables/: CaceMutex.cpp  ConsensusVariable.cpp  Election.cpp  TaskSet.cpp
test/: applicationTests.cpp  caceTests.cpp  jobTests.cpp  multicasttests.cpp  serialization.cpp  systemTests.cpp
test/eval/: consistencyEval.cpp  speed.cpp
