<?xml version="1.0"?>
<package>
  <name>paxostest</name>
  <version>0.0.1</version>
  <description>The paxos test package</description>

  <maintainer email="witsch@vs.uni-kassel.de">Andreas Witsch</maintainer>

  <license>GPLv2</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/alica_engine</url> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>roscpp</build_depend>
  <!--build_depend>system_config</build_depend-->
  
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>roscpp</run_depend>
  
  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>gtest</test_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
